--- a/src/main/resources/lang/en_US.lang
+++ b/src/main/resources/lang/en_US.lang
@@ -791,7 +791,6 @@ block.minecraft.purpur_stairs=Purpur Stairs
 block.minecraft.purpur_slab=Purpur Slab
 block.minecraft.end_stone_bricks=End Stone Bricks
 block.minecraft.beetroots=Beetroots
-block.minecraft.grass_path=Grass Path
 block.minecraft.magma_block=Magma Block
 block.minecraft.nether_wart_block=Nether Wart Block
 block.minecraft.red_nether_bricks=Red Nether Bricks
@@ -1565,3 +1564,155 @@ enchantment.level.7=VII
 enchantment.level.8=VIII
 enchantment.level.9=IX
 enchantment.level.10=X
+item.minecraft.amethyst_block=Amethyst Block
+item.minecraft.amethyst_cluster=Amethyst Cluster
+item.minecraft.amethyst_shard=Amethyst Shard
+item.minecraft.axolotl_bucket=Axolotl Bucket
+item.minecraft.axolotl_spawn_egg=Axolotl Spawn Egg
+item.minecraft.azalea=Azalea
+item.minecraft.azalea_leaves=Azalea Leaves
+item.minecraft.big_dripleaf=Big Dripleaf
+item.minecraft.big_dripleaf_stem=Big Dripleaf Stem
+item.minecraft.black_candle=Black Candle
+item.minecraft.black_candle_cake=Black Candle Cake
+item.minecraft.blue_candle=Blue Candle
+item.minecraft.blue_candle_cake=Blue Candle Cake
+item.minecraft.brown_candle=Brown Candle
+item.minecraft.brown_candle_cake=Brown Candle Cake
+item.minecraft.budding_amethyst=Budding Amethyst
+item.minecraft.bundle=Bundle
+item.minecraft.calcite=Calcite
+item.minecraft.candle=Candle
+item.minecraft.candle_cake=Candle Cake
+item.minecraft.cave_vines=Cave Vines
+item.minecraft.cave_vines_plant=Cave Vines Plant
+item.minecraft.chiseled_deepslate=Chiseled Deepslate
+item.minecraft.cobbled_deepslate=Cobbled Deepslate
+item.minecraft.cobbled_deepslate_slab=Cobbled Deepslate Slab
+item.minecraft.cobbled_deepslate_stairs=Cobbled Deepslate Stairs
+item.minecraft.cobbled_deepslate_wall=Cobbled Deepslate Wall
+item.minecraft.copper_block=Copper Block
+item.minecraft.copper_ingot=Copper Ingot
+item.minecraft.copper_ore=Copper Ore
+item.minecraft.cracked_deepslate_bricks=Cracked Deepslate Bricks
+item.minecraft.cracked_deepslate_tiles=Cracked Deepslate Tiles
+item.minecraft.cut_copper=Cut Copper
+item.minecraft.cut_copper_slab=Cut Copper Slab
+item.minecraft.cut_copper_stairs=Cut Copper Stairs
+item.minecraft.cyan_candle=Cyan Candle
+item.minecraft.cyan_candle_cake=Cyan Candle Cake
+item.minecraft.deepslate=Deepslate
+item.minecraft.deepslate_brick_slab=Deepslate Brick Slab
+item.minecraft.deepslate_brick_stairs=Deepslate Brick Stairs
+item.minecraft.deepslate_brick_wall=Deepslate Brick Wall
+item.minecraft.deepslate_bricks=Deepslate Bricks
+item.minecraft.deepslate_coal_ore=Deepslate Coal Ore
+item.minecraft.deepslate_copper_ore=Deepslate Copper Ore
+item.minecraft.deepslate_diamond_ore=Deepslate Diamond Ore
+item.minecraft.deepslate_emerald_ore=Deepslate Emerald Ore
+item.minecraft.deepslate_gold_ore=Deepslate Gold Ore
+item.minecraft.deepslate_iron_ore=Deepslate Iron Ore
+item.minecraft.deepslate_lapis_ore=Deepslate Lapis Ore
+item.minecraft.deepslate_redstone_ore=Deepslate Redstone Ore
+item.minecraft.deepslate_tile_slab=Deepslate Tile Slab
+item.minecraft.deepslate_tile_stairs=Deepslate Tile Stairs
+item.minecraft.deepslate_tile_wall=Deepslate Tile Wall
+item.minecraft.deepslate_tiles=Deepslate Tiles
+item.minecraft.dirt_path=Dirt Path
+item.minecraft.dripstone_block=Dripstone Block
+item.minecraft.exposed_copper=Exposed Copper
+item.minecraft.exposed_cut_copper=Exposed Cut Copper
+item.minecraft.exposed_cut_copper_slab=Exposed Cut Copper Slab
+item.minecraft.exposed_cut_copper_stairs=Exposed Cut Copper Stairs
+item.minecraft.flowering_azalea=Flowering Azalea
+item.minecraft.flowering_azalea_leaves=Flowering Azalea Leaves
+item.minecraft.glow_berries=Glow Berries
+item.minecraft.glow_ink_sac=Glow Ink Sac
+item.minecraft.glow_item_frame=Glow Item Frame
+item.minecraft.glow_lichen=Glow Lichen
+item.minecraft.glow_squid_spawn_egg=Glow Squid Spawn Egg
+item.minecraft.goat_spawn_egg=Goat Spawn Egg
+item.minecraft.gray_candle=Gray Candle
+item.minecraft.gray_candle_cake=Gray Candle Cake
+item.minecraft.green_candle=Green Candle
+item.minecraft.green_candle_cake=Green Candle Cake
+item.minecraft.hanging_roots=Hanging Roots
+item.minecraft.infested_deepslate=Infested Deepslate
+item.minecraft.large_amethyst_bud=Large Amethyst Bud
+item.minecraft.lava_cauldron=Lava Cauldron
+item.minecraft.light=Light
+item.minecraft.light_blue_candle=Light Blue Candle
+item.minecraft.light_blue_candle_cake=Light Blue Candle Cake
+item.minecraft.light_gray_candle=Light Gray Candle
+item.minecraft.light_gray_candle_cake=Light Gray Candle Cake
+item.minecraft.lightning_rod=Lightning Rod
+item.minecraft.lime_candle=Lime Candle
+item.minecraft.lime_candle_cake=Lime Candle Cake
+item.minecraft.magenta_candle=Magenta Candle
+item.minecraft.magenta_candle_cake=Magenta Candle Cake
+item.minecraft.medium_amethyst_bud=Medium Amethyst Bud
+item.minecraft.moss_block=Moss Block
+item.minecraft.moss_carpet=Moss Carpet
+item.minecraft.orange_candle=Orange Candle
+item.minecraft.orange_candle_cake=Orange Candle Cake
+item.minecraft.oxidized_copper=Oxidized Copper
+item.minecraft.oxidized_cut_copper=Oxidized Cut Copper
+item.minecraft.oxidized_cut_copper_slab=Oxidized Cut Copper Slab
+item.minecraft.oxidized_cut_copper_stairs=Oxidized Cut Copper Stairs
+item.minecraft.piglin_brute_spawn_egg=Piglin Brute Spawn Egg
+item.minecraft.pink_candle=Pink Candle
+item.minecraft.pink_candle_cake=Pink Candle Cake
+item.minecraft.pointed_dripstone=Pointed Dripstone
+item.minecraft.polished_deepslate=Polished Deepslate
+item.minecraft.polished_deepslate_slab=Polished Deepslate Slab
+item.minecraft.polished_deepslate_stairs=Polished Deepslate Stairs
+item.minecraft.polished_deepslate_wall=Polished Deepslate Wall
+item.minecraft.potted_azalea_bush=Potted Azalea Bush
+item.minecraft.potted_flowering_azalea_bush=Potted Flowering Azalea Bush
+item.minecraft.powder_snow=Powder Snow
+item.minecraft.powder_snow_bucket=Powder Snow Bucket
+item.minecraft.powder_snow_cauldron=Powder Snow Cauldron
+item.minecraft.purple_candle=Purple Candle
+item.minecraft.purple_candle_cake=Purple Candle Cake
+item.minecraft.raw_copper=Raw Copper
+item.minecraft.raw_copper_block=Raw Copper Block
+item.minecraft.raw_gold=Raw Gold
+item.minecraft.raw_gold_block=Raw Gold Block
+item.minecraft.raw_iron=Raw Iron
+item.minecraft.raw_iron_block=Raw Iron Block
+item.minecraft.red_candle=Red Candle
+item.minecraft.red_candle_cake=Red Candle Cake
+item.minecraft.rooted_dirt=Rooted Dirt
+item.minecraft.sculk_sensor=Sculk Sensor
+item.minecraft.small_amethyst_bud=Small Amethyst Bud
+item.minecraft.small_dripleaf=Small Dripleaf
+item.minecraft.smooth_basalt=Smooth Basalt
+item.minecraft.spore_blossom=Spore Blossom
+item.minecraft.spyglass=Spyglass
+item.minecraft.tinted_glass=Tinted Glass
+item.minecraft.tuff=Tuff
+item.minecraft.water_cauldron=Water Cauldron
+item.minecraft.waxed_copper_block=Waxed Copper Block
+item.minecraft.waxed_cut_copper=Waxed Cut Copper
+item.minecraft.waxed_cut_copper_slab=Waxed Cut Copper Slab
+item.minecraft.waxed_cut_copper_stairs=Waxed Cut Copper Stairs
+item.minecraft.waxed_exposed_copper=Waxed Exposed Copper
+item.minecraft.waxed_exposed_cut_copper=Waxed Exposed Cut Copper
+item.minecraft.waxed_exposed_cut_copper_slab=Waxed Exposed Cut Copper Slab
+item.minecraft.waxed_exposed_cut_copper_stairs=Waxed Exposed Cut Copper Stairs
+item.minecraft.waxed_oxidized_copper=Waxed Oxidized Copper
+item.minecraft.waxed_oxidized_cut_copper=Waxed Oxidized Cut Copper
+item.minecraft.waxed_oxidized_cut_copper_slab=Waxed Oxidized Cut Copper Slab
+item.minecraft.waxed_oxidized_cut_copper_stairs=Waxed Oxidized Cut Copper Stairs
+item.minecraft.waxed_weathered_copper=Waxed Weathered Copper
+item.minecraft.waxed_weathered_cut_copper=Waxed Weathered Cut Copper
+item.minecraft.waxed_weathered_cut_copper_slab=Waxed Weathered Cut Copper Slab
+item.minecraft.waxed_weathered_cut_copper_stairs=Waxed Weathered Cut Copper Stairs
+item.minecraft.weathered_copper=Weathered Copper
+item.minecraft.weathered_cut_copper=Weathered Cut Copper
+item.minecraft.weathered_cut_copper_slab=Weathered Cut Copper Slab
+item.minecraft.weathered_cut_copper_stairs=Weathered Cut Copper Stairs
+item.minecraft.white_candle=White Candle
+item.minecraft.white_candle_cake=White Candle Cake
+item.minecraft.yellow_candle=Yellow Candle
+item.minecraft.yellow_candle_cake=Yellow Candle Cake
